<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.order.orderFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/textVie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/Payment"
        app:layout_constraintBottom_toTopOf="@+id/constraintCard4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.135" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintCard4"
        android:layout_width="339dp"
        android:layout_height="132dp"
        android:layout_marginTop="140dp"
        android:background="@drawable/card_bg"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintCircleRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/numberText"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/cardNumber"
            android:textColor="@color/black"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/numberText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="8dp"
            android:autofillHints="@string/XXXX"
            android:hint="@string/XXXX"
            android:inputType="number"
            android:maxEms="1"
            android:maxLength="20"
            android:textColor="@color/black"
            android:textSize="8sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cvcText"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_toStartOf="@+id/monthText"
            android:text="@string/cardName"
            android:textColor="@color/black"
            android:textSize="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/nameText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView4"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:autofillHints="@string/name"
            android:hint="@string/name"
            android:inputType="text"
            android:maxLength="60"
            android:textColor="@color/black"
            android:textSize="8sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textView"
            android:layout_alignBottom="@+id/monthText"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/expire"
            android:textColor="@color/black"
            android:textSize="8sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameText" />

        <EditText
            android:id="@+id/monthText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/numberText"
            android:layout_alignStart="@+id/numberText"
            android:layout_marginStart="4dp"
            android:autofillHints="@string/mm"
            android:hint="@string/mm"
            android:inputType="number"
            android:maxLength="2"
            android:textColor="@color/black"
            android:textSize="8sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <EditText
            android:id="@+id/yearText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/monthText"
            android:layout_marginStart="4dp"
            android:layout_toEndOf="@+id/monthText"
            android:autofillHints="@string/yyyy"
            android:hint="@string/yyyy"
            android:inputType="number"
            android:maxLength="4"
            android:textColor="@color/black"
            android:textSize="8sp"
            app:layout_constraintBottom_toBottomOf="@+id/monthText"
            app:layout_constraintStart_toEndOf="@+id/monthText"
            app:layout_constraintTop_toTopOf="@+id/monthText"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/cvcText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView3"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@+id/textView3"
            android:autofillHints="@string/cvc"
            android:hint="@string/cvc"
            android:inputType="number"
            android:maxLength="3"
            android:textColor="@color/black"
            android:textSize="8sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/monthText"
            android:layout_alignParentStart="true"
            android:layout_marginStart="48dp"
            android:layout_marginTop="8dp"
            android:text="@string/cardCvc"
            android:textColor="@color/black"
            android:textSize="8sp"
            app:layout_constraintBottom_toBottomOf="@+id/yearText"
            app:layout_constraintStart_toEndOf="@+id/yearText"
            app:layout_constraintTop_toBottomOf="@+id/nameText"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txt_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/txt_address"
        app:layout_constraintBottom_toTopOf="@+id/paymentButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintCard4"
        app:layout_constraintVertical_bias="0.227" />

    <Button
        android:id="@+id/paymentButton"
        android:layout_width="150dp"
        android:layout_height="63dp"

        android:background="@drawable/button_design"
        android:drawablePadding="8dp"
        android:text="@string/pay"
        android:textColor="@drawable/button_design_text"
        android:textStyle="bold"
        app:backgroundTint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintCard4"
        app:layout_constraintVertical_bias="0.393" />


</androidx.constraintlayout.widget.ConstraintLayout>